[gd_scene load_steps=12 format=3 uid="uid://b6u8sumqq6yf5"]

[ext_resource type="Material" uid="uid://cphy46e6l58n5" path="res://Materials/BossMaterial/TestBossMaterial.tres" id="1_0154r"]
[ext_resource type="Script" uid="uid://wbsn2n4eg8qm" path="res://Scripts/bossAttempt.gd" id="1_wwfse"]

[sub_resource type="SphereShape3D" id="SphereShape3D_wwfse"]

[sub_resource type="SphereMesh" id="SphereMesh_cxrok"]
material = ExtResource("1_0154r")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ukjjc"]
shading_mode = 0
specular_mode = 2
albedo_color = Color(0, 0, 0, 1)
refraction_enabled = true
disable_receive_shadows = true

[sub_resource type="PrismMesh" id="PrismMesh_n725y"]
material = SubResource("StandardMaterial3D_ukjjc")

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_mh6p8"]
properties/0/path = NodePath("CharacterBody3D:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("CharacterBody3D:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1

[sub_resource type="Animation" id="Animation_qtle2"]
resource_name = "Idling"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterBody3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.0333333, 1.5, 4),
"transitions": PackedFloat32Array(-2, 0.5, -0.000280442),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 1, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_yq25j"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterBody3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_odcco"]
_data = {
&"Idling": SubResource("Animation_qtle2"),
&"RESET": SubResource("Animation_yq25j")
}

[sub_resource type="CylinderShape3D" id="CylinderShape3D_wwfse"]

[node name="Boss" type="Node3D"]
transform = Transform3D(1.00029, 0, 0, 0, 1.00029, 0, 0, 0, 1.00029, 0, 0, 0)
script = ExtResource("1_wwfse")

[node name="CharacterBody3D" type="CharacterBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D"]
transform = Transform3D(3.34224, 0, 0, 0, 3.34224, 0, 0, 0, 3.34224, 0, 0, 0)
shape = SubResource("SphereShape3D_wwfse")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CharacterBody3D"]
transform = Transform3D(3.05698, 0, 0, 0, 3.05698, 0, 0, 0, 3.05698, 0, 0, 0)
mesh = SubResource("SphereMesh_cxrok")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 1.70676)
mesh = SubResource("PrismMesh_n725y")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_mh6p8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_odcco")
}
autoplay = "Idling"

[node name="DelayBeforeAttack" type="Timer" parent="."]

[node name="AttackOrigin" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.76182, 0)

[node name="Area3D" type="Area3D" parent="."]

[node name="AggroRange" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(33.0202, 0, 0, 0, 1.40424, 0, 0, 0, 33.9332, 0, 0, 0)
shape = SubResource("CylinderShape3D_wwfse")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
